[gd_scene load_steps=5 format=2]

[ext_resource path="res://MainFacilities/Defenders/GroundForce/GroundGuns/BasicDefenders/BasicGroundGuns.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 40, 40 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 3, 3 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 35, 35 )

[node name="BasicGroundWeapons" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, 0.25 )
scale = Vector2( 1, 0.990196 )

[node name="Is_colliding" type="Node2D" parent="."]

[node name="Is_colliding_Planet" type="Area2D" parent="Is_colliding"]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Is_colliding/Is_colliding_Planet"]
shape = SubResource( 2 )

[node name="_on_Is_colliding_Weapons" type="Area2D" parent="Is_colliding"]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Is_colliding/_on_Is_colliding_Weapons"]
shape = SubResource( 3 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[node name="Position1" type="Position2D" parent="."]

[connection signal="area_entered" from="Is_colliding/Is_colliding_Planet" to="." method="_on_Is_colliding_Planet_area" binds= [ true ]]
[connection signal="area_exited" from="Is_colliding/Is_colliding_Planet" to="." method="_on_Is_colliding_Planet_area" binds= [ false ]]
[connection signal="area_entered" from="Is_colliding/_on_Is_colliding_Weapons" to="." method="_on_Is_colliding_Weapons_area" binds= [ true ]]
[connection signal="area_exited" from="Is_colliding/_on_Is_colliding_Weapons" to="." method="_on_Is_colliding_Weapons_area" binds= [ false ]]
